--- a/pom.xml
+++ b/pom.xml
@@ -22,25 +22,36 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
         <cucumber.version>7.15.0</cucumber.version>
         <junit.version>4.13.2</junit.version>
-        <appium.version>9.5.0</appium.version>
-        <selenium.version>4.34.0</selenium.version>
+        <appium.version>10.0.0</appium.version>
+        <selenium.version>4.38.0</selenium.version>
         <allure.version>2.25.0</allure.version>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-bom</artifactId>
+                <version>${selenium.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
+
+        <!-- Selenium (gerenciado pelo BOM) -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+        </dependency>
 
         <!-- Appium -->
         <dependency>
             <groupId>io.appium</groupId>
             <artifactId>java-client</artifactId>
             <version>${appium.version}</version>
-        </dependency>
-
-        <!-- Selenium -->
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>${selenium.version}</version>
         </dependency>
 
         <!-- Cucumber Java -->
@@ -118,6 +129,8 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
                 <artifactId>allure-maven</artifactId>
                 <version>2.11.2</version>
             </plugin>
+
+            <!-- Source: https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
 
         </plugins>
 
